--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "section0": {
+    "FromEmail": "no-reply@nccricketclub.org",
+    "FromEmailPassword": "Cricket2021$$",
+    "ToEmail": "sahashra78@gmail.com",
+    "SMTPServerName": "smtp-mail.outlook.com",
+    "PortNumber": "587"
+  }
 }
