--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "section0": {
+  "EmailConfig": {
     "FromEmail": "no-reply@nccricketclub.org",
     "FromEmailPassword": "Cricket2021$$",
-    "ToEmail": "sahashra78@gmail.com",
+    "ToEmail": "treasurer@nccricketclub.org",
     "SMTPServerName": "smtp-mail.outlook.com",
     "PortNumber": "587"
   }
