--- a/NCCC-Blazor.csproj
+++ b/NCCC-Blazor.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>NCCC_Blazor</RootNamespace>
     <StartupObject></StartupObject>
+    <UserSecretsId>333a328c-ebad-46e7-bd06-e80b5ecfff93</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +16,6 @@
 
   <ItemGroup>
     <PackageReference Include="ChoETL.JSON" Version="1.2.1.6" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
