--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
   "EmailConfig": {
     "FromEmail": "no-reply@nccricketclub.org",
     "FromEmailPassword": "Cricket2021$$",
-    "ToEmail": "kisan@nccricketclub.org",
+    "ToEmail": "treasurer@nccricketclub.org",
     "SMTPServerName": "smtp-mail.outlook.com",
     "PortNumber": "587"
   }
