--- a/NCCC-Blazor.csproj
+++ b/NCCC-Blazor.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="ChoETL.JSON" Version="1.2.1.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
