--- a/NCCC-Blazor.csproj
+++ b/NCCC-Blazor.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="ChoETL.JSON" Version="1.2.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
